@@ -7,6 +7,7 @@ Nagios 3.x Change Log
 ------------------
 * Added automatic update check functionality - runs once a day to check for new Nagios releases
 * Splash screen on web UI now indicates whether a new update is available (requires that update checks are enabled)
+* Updates to nagiostats utility for faster execution if using external stats file
 
 
 
